--- a/index.html
+++ b/index.html
@@ -5,235 +5,138 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Student Feedback Form</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body { font-family: 'Roboto', sans-serif; background: #f9fafc; min-height: 100vh; display: flex; align-items: center; justify-content: center; padding: 20px; }
-    .form-card { background: #fff; border-radius: 16px; box-shadow: 0 6px 20px rgba(0,0,0,0.08); padding: 32px; max-width: 720px; width: 100%; margin: auto; }
-    .form-page { display: none; }
-    .form-page.active { display: block; }
-    label { display: block; font-weight: 500; margin-bottom: 6px; color: #333; }
-    input, select, textarea { width: 100%; padding: 10px 12px; border: 1px solid #d1d5db; border-radius: 8px; outline: none; transition: all 0.2s; }
-    input:focus, select:focus, textarea:focus { border-color: #6366f1; box-shadow: 0 0 0 2px rgba(99,102,241,0.2); }
-    button { border-radius: 8px; padding: 10px 20px; font-weight: 600; }
-    .btn-primary { background: #6366f1; color: white; }
-    .btn-secondary { background: #6b7280; color: white; }
-    .result-box { padding: 10px; border-radius: 8px; background: #f3f4f6; margin-top: 8px; }
-  </style>
 </head>
-<body>
-<div class="form-card">
+<body class="bg-gray-100 min-h-screen flex items-center justify-center">
 
-  <div class="text-center mb-8">
-    <h1 class="text-2xl font-bold text-gray-800">THE INSTITUTE OF CHARTERED ACCOUNTANTS OF INDIA</h1>
-    <h2 class="text-3xl font-bold text-indigo-600 mt-2">STUDENT FEEDBACK FORM</h2>
+  <div class="bg-white shadow-lg rounded-xl p-8 w-full max-w-3xl">
+    <h1 class="text-2xl font-bold mb-6 text-center">📋 Student Feedback Form</h1>
+
+    <form id="feedbackForm" class="space-y-4">
+      <input name="studentName" placeholder="Student Name" class="w-full border p-2 rounded" required>
+      <input name="regNumber" placeholder="Registration Number" class="w-full border p-2 rounded" required>
+      <input name="email" type="email" placeholder="Email" class="w-full border p-2 rounded">
+      <input name="mobile" type="tel" placeholder="Mobile" class="w-full border p-2 rounded">
+      <input name="facultyName" placeholder="Faculty Name" class="w-full border p-2 rounded">
+      <input name="batchId" placeholder="Batch ID" class="w-full border p-2 rounded">
+
+      <h2 class="text-lg font-semibold mt-6">Feedback Criteria (Rate 1–5)</h2>
+
+      <select name="Attendance & Punctuality" class="w-full border p-2 rounded" required>
+        <option value="">Attendance & Punctuality</option>
+        <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+      </select>
+      <select name="Professional Image & Engagement" class="w-full border p-2 rounded" required>
+        <option value="">Professional Image & Engagement</option>
+        <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+      </select>
+      <select name="Discipline" class="w-full border p-2 rounded" required>
+        <option value="">Discipline</option>
+        <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+      </select>
+      <select name="Active Participation" class="w-full border p-2 rounded" required>
+        <option value="">Active Participation</option>
+        <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+      </select>
+      <select name="Group Activities & Teamwork" class="w-full border p-2 rounded" required>
+        <option value="">Group Activities & Teamwork</option>
+        <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+      </select>
+      <select name="Presentation - Content" class="w-full border p-2 rounded" required>
+        <option value="">Presentation - Content</option>
+        <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+      </select>
+      <select name="Presentation - Delivery" class="w-full border p-2 rounded" required>
+        <option value="">Presentation - Delivery</option>
+        <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+      </select>
+      <select name="Communication Skills" class="w-full border p-2 rounded" required>
+        <option value="">Communication Skills</option>
+        <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+      </select>
+      <select name="Analytical Thinking" class="w-full border p-2 rounded" required>
+        <option value="">Analytical Thinking</option>
+        <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+      </select>
+      <select name="Creativity & Innovation" class="w-full border p-2 rounded" required>
+        <option value="">Creativity & Innovation</option>
+        <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+      </select>
+      <select name="Professional Ethics Awareness" class="w-full border p-2 rounded" required>
+        <option value="">Professional Ethics Awareness</option>
+        <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+      </select>
+      <select name="Student-Faculty Interaction Quality" class="w-full border p-2 rounded" required>
+        <option value="">Student-Faculty Interaction Quality</option>
+        <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+      </select>
+      <select name="Overall Engagement" class="w-full border p-2 rounded" required>
+        <option value="">Overall Engagement</option>
+        <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+      </select>
+      <select name="Politeness & Courtesy" class="w-full border p-2 rounded" required>
+        <option value="">Politeness & Courtesy</option>
+        <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+      </select>
+      <select name="Use of Real-World Examples" class="w-full border p-2 rounded" required>
+        <option value="">Use of Real-World Examples</option>
+        <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+      </select>
+      <select name="Ease of Asking Questions" class="w-full border p-2 rounded" required>
+        <option value="">Ease of Asking Questions</option>
+        <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+      </select>
+      <select name="Individual Attention to Students" class="w-full border p-2 rounded" required>
+        <option value="">Individual Attention to Students</option>
+        <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+      </select>
+      <select name="Encourages and Motivates Students" class="w-full border p-2 rounded" required>
+        <option value="">Encourages and Motivates Students</option>
+        <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+      </select>
+
+      <input name="averageScore" placeholder="Average Score" class="w-full border p-2 rounded">
+      <input name="quizMarks" placeholder="Quiz Marks" class="w-full border p-2 rounded">
+      <input name="weightedScore" placeholder="Weighted Score" class="w-full border p-2 rounded">
+      <input name="grade" placeholder="Grade" class="w-full border p-2 rounded">
+
+      <textarea name="comments" placeholder="Comments" class="w-full border p-2 rounded"></textarea>
+
+      <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded">
+        Submit
+      </button>
+    </form>
+
+    <p id="status" class="mt-4 text-center text-gray-700"></p>
   </div>
 
-  <div id="page1" class="form-page active">
-    <h2 class="text-xl font-semibold mb-6">Student Information</h2>
-    <div class="space-y-4">
-      <input type="text" id="studentName" placeholder="Full Name *">
-      <input type="text" id="regNumber" placeholder="Registration Number * (AAA1234567)">
-      <input type="email" id="email" placeholder="Email *">
-      <input type="tel" id="mobile" placeholder="Mobile Number * (10 digits)">
-    </div>
-    <div class="mt-8 text-right">
-      <button onclick="validatePage1()" class="btn-primary">Next → Select Faculty</button>
-    </div>
-  </div>
+  <script>
+    document.getElementById("feedbackForm").addEventListener("submit", async function(e) {
+      e.preventDefault();
 
-  <div id="page2" class="form-page">
-    <h2 class="text-xl font-semibold mb-6">Select Faculty</h2>
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-4" id="facultyGrid"></div>
-  </div>
+      const form = e.target;
+      const data = Object.fromEntries(new FormData(form).entries());
 
-  <div id="page3" class="form-page">
-    <h2 class="text-xl font-semibold mb-2">Feedback for <span id="currentFaculty" class="text-indigo-600"></span></h2>
-    <div class="space-y-4 mt-4" id="questionsContainer">
-      <label>Batch ID *</label>
-      <input type="text" id="batchId" placeholder="Batch ID">
-      <div id="ratings"></div>
-      <label>Quiz Marks *</label>
-      <input type="number" step="0.01" min="1" max="100" id="quizMarks" placeholder="Enter quiz marks" oninput="updateScore()">
-      <div class="result-box" id="averageScoreDisplay">Average Feedback Score: 0</div>
-      <div class="result-box" id="weightedScoreDisplay">Weighted Score: 0</div>
-      <div class="result-box" id="gradeDisplay">Grade: -</div>
-      <label>Additional Comments (Optional)</label>
-      <textarea id="comments" rows="3"></textarea>
-    </div>
-    <div class="mt-8 flex justify-between">
-      <button onclick="showFacultySelection()" class="btn-secondary">← Back</button>
-      <button onclick="submitFacultyFeedback()" class="btn-primary">Submit Feedback →</button>
-    </div>
-  </div>
+      document.getElementById("status").textContent = "⏳ Submitting...";
 
-  <div id="page4" class="form-page text-center">
-    <h2 class="text-3xl font-bold text-green-600 mb-4">All Feedback Submitted Successfully!</h2>
-    <p class="text-gray-600">Thank you for your valuable feedback.</p>
-  </div>
-</div>
+      try {
+        const res = await fetch("https://script.google.com/macros/s/AKfycby-pecNA2iTiza8agKnLJ2qlXtFS3zZNZD-M3cWe4Ch23hbGUD-HTwzDoFqVHkw7WAM/exec", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(data)
+        });
 
-<script>
-let faculties = ["Sandeep Agarwal","Bhanu Dhir","Shekhar Sharma","Anju Gupta","Preeti Goel","Rohit Agarwal","Sunita Rathore"];
-let completedFaculties = [];
-let selectedFacultyIndex = -1;
-let feedbackData = [];
+        const result = await res.json();
 
-const questions = [
-  "Attendance & Punctuality","Professional Image & Engagement","Discipline","Active Participation",
-  "Group Activities & Teamwork","Presentation - Content","Presentation - Delivery","Communication Skills",
-  "Analytical Thinking","Creativity & Innovation","Professional Ethics Awareness","Student-Faculty Interaction Quality",
-  "Overall Engagement","Politeness & Courtesy","Use of Real-World Examples","Ease of Asking Questions",
-  "Individual Attention to Students","Encourages and Motivates Students"
-];
-
-const scoreMap = { "1: Poor":20, "2: Below Average":40, "3: Average":60, "4: Good":80, "5: Excellent":100 };
-
-// generate rating questions dynamically
-const ratingsDiv=document.getElementById("ratings");
-questions.forEach((q,i)=>{
-  let label=document.createElement("label");label.innerText=q;
-  let select=document.createElement("select");
-  select.className="ratingSelect";
-  select.innerHTML=`<option value="">Select rating</option>
-    <option>1: Poor</option>
-    <option>2: Below Average</option>
-    <option>3: Average</option>
-    <option>4: Good</option>
-    <option>5: Excellent</option>`;
-  select.onchange=updateScore;
-  ratingsDiv.appendChild(label);ratingsDiv.appendChild(select);
-});
-
-function showPage(id){
-  document.querySelectorAll(".form-page").forEach(p=>p.classList.remove("active"));
-  document.getElementById(id).classList.add("active");
-}
-
-function validatePage1(){
-  let name=document.getElementById("studentName").value.trim();
-  let reg=document.getElementById("regNumber").value.trim();
-  let email=document.getElementById("email").value.trim();
-  let mob=document.getElementById("mobile").value.trim();
-
-  if(!name||!reg||!email||!mob){
-    alert("All fields required");return;
-  }
-  if(!/^[A-Za-z]{3}[0-9]{7}$/.test(reg)){
-    alert("Registration No. must be 3 letters + 7 digits (e.g. AAA1234567)");return;
-  }
-  if(!/\S+@\S+\.\S+/.test(email)){
-    alert("Invalid Email format");return;
-  }
-  if(!/^\d{10}$/.test(mob)){
-    alert("Mobile must be 10 digits only");return;
-  }
-  showFacultySelection();
-}
-
-function showFacultySelection(){
-  showPage("page2");
-  const grid=document.getElementById("facultyGrid");grid.innerHTML="";
-  faculties.forEach((f,i)=>{
-    let card=document.createElement("div");
-    card.className="p-4 border rounded-lg text-center cursor-pointer "+(completedFaculties.includes(f)?"bg-green-100":"hover:bg-indigo-50");
-    card.innerHTML=`<h3 class="font-medium">${f}</h3>`;
-    if(!completedFaculties.includes(f)){ card.onclick=()=>{selectedFacultyIndex=i;startFeedback();}; }
-    grid.appendChild(card);
-  });
-}
-
-function startFeedback(){
-  showPage("page3");
-  document.getElementById("currentFaculty").innerText=faculties[selectedFacultyIndex];
-  document.querySelectorAll(".ratingSelect").forEach(el=>el.selectedIndex=0);
-  document.getElementById("batchId").value="";
-  document.getElementById("quizMarks").value="";
-  document.getElementById("comments").value="";
-  updateScore();
-}
-
-function getScore(el){return scoreMap[el.value]||0;}
-
-function updateScore(){
-  let selects=document.querySelectorAll(".ratingSelect");
-  let total=0,count=0;selects.forEach(el=>{if(el.value){total+=getScore(el);count++;}});
-  let avg=(count>0)?total/count:0;
-  let quiz=parseFloat(document.getElementById("quizMarks").value)||0;
-  let weighted=(avg*0.7)+(quiz*0.3);
-  document.getElementById("averageScoreDisplay").innerText="Average Feedback Score: "+avg.toFixed(2);
-  document.getElementById("weightedScoreDisplay").innerText="Weighted Score: "+weighted.toFixed(2);
-  let grade="-";
-  if(weighted>=85) grade="A+"; else if(weighted>=70) grade="A"; else if(weighted>=55) grade="B+"; else if(weighted>=40) grade="B"; else grade="C";
-  document.getElementById("gradeDisplay").innerText="Grade: "+grade;
-}
-
-async function submitFacultyFeedback() {
-  let batch=document.getElementById("batchId").value.trim();
-  if(!batch){alert("Batch ID required"); return;}
-  let selects=document.querySelectorAll(".ratingSelect");
-  for(let el of selects){if(!el.value){alert("All ratings required"); return;}}
-  let quiz=parseFloat(document.getElementById("quizMarks").value);
-  if(isNaN(quiz)||quiz<1||quiz>100){alert("Quiz marks must be 1-100"); return;}
-
-  let studentName=document.getElementById("studentName").value.trim();
-  let regNumber=document.getElementById("regNumber").value.trim();
-  let email=document.getElementById("email").value.trim();
-  let mobile=document.getElementById("mobile").value.trim();
-  let facultyName=faculties[selectedFacultyIndex];
-
-  let ratings={};
-  questions.forEach((q,i)=>{ratings[q]=scoreMap[selects[i].value]||"";});
-
-  let total=0,count=0;selects.forEach(el=>{if(el.value) total+=scoreMap[el.value]; count++;});
-  let avg=(count>0)?total/count:0;
-  let weighted=(avg*0.7)+(quiz*0.3);
-  let grade="-";
-  if(weighted>=85) grade="A+"; else if(weighted>=70) grade="A"; else if(weighted>=55) grade="B+"; else if(weighted>=40) grade="B"; else grade="C";
-  let comments=document.getElementById("comments").value.trim();
-
-  let row={studentName, regNumber, email, mobile, facultyName, batchId:batch, ...ratings, averageScore:avg.toFixed(2), quizMarks:quiz, weightedScore:weighted.toFixed(2), grade, comments};
-
-  feedbackData.push(row);
-  completedFaculties.push(facultyName);
-
-  try {
-    const response = await fetch("https://script.google.com/macros/s/AKfycbzPxp5UIjQtnnJScuVapNo9PoPPcqBB-QRLI07bH4VvpiUqso1tOHz1zpWUL5p-1CcE/exec", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify([row]),
-      mode: "cors"  // important for GitHub Pages
+        if (result.result === "success") {
+          document.getElementById("status").textContent = "✅ Submitted successfully!";
+          form.reset();
+        } else {
+          document.getElementById("status").textContent = "❌ Error: " + result.message;
+        }
+      } catch (err) {
+        document.getElementById("status").textContent = "⚠️ Failed to submit: " + err.message;
+      }
     });
-
-    if (!response.ok) {
-      const text = await response.text();
-      throw new Error("HTTP " + response.status + ": " + text);
-    }
-
-    const result = await response.json();
-    if (result.result !== "success") {
-      throw new Error(result.message);
-    }
-
-    console.log("Saved OK:", result);
-
-    if(completedFaculties.length===faculties.length){
-      showPage("page4");
-    } else {
-      showFacultySelection();
-    }
-
-  } catch (err) {
-    console.error("Full error:", err);
-    alert("Error saving feedback: " + err.message);
-  }
-}
-</script>
+  </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
